# PyPaperFlow

./: .pre-commit-config.yaml  Dockerfile  LICENCE  README.md  pyproject.toml
examples/: instructions.ipynb
examples/files/: wikipedia.html
src/html2pdf/: __init__.py  html2pdf.py  main.py
src/pypaperflow/: html2pdf.py  logger.py  main.py  word2html.py
